# miltrack

./: .env.example  .gitignore  DEPLOY.md  DEPLOYMENT_TROUBLESHOOTING_REPORT.md  OVERVIEW.md  README.md  app.yaml  app.yml  databricks.yml  deploy.sh  pyproject.toml  requirements.txt
backend/: app.py  death_toll.py  intel.py  tracker.py
docs/: DEPLOYMENT_TROUBLESHOOTING_REPORT.md  SECRET_SCOPE_EXPLAINED.md
frontend/: index.html  package.json
frontend/src/: App.tsx  globals.css  tracker-api.ts
